# battleship

./: .gitignore  README.md
battleship-cli/: Cargo.toml
battleship-cli/src/: main.rs
battleship-game/: Cargo.toml
battleship-game/src/: lib.rs  protocol.rs
battleship-game/src/client/: blocking.rs  mod.rs
battleship-game/src/server/: blocking.rs  mod.rs
battleship-ws-client/: Cargo.toml
battleship-ws-client/src/: lib.rs
battleship-ws-client/www/: index.html  index.js  package-lock.json  package.json
battleship-ws-server/: Cargo.toml
battleship-ws-server/src/: main.rs
