[package]
name = "battleship-cli"
version = "0.1.0"
authors = ["Remi Bernotavicius <remi@kunugiken.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battleship-game = { path = "../battleship-game", version = "0.1.0" }
simple_logger = "*"
log = "*"
