[package]
name = "battleship-game"
version = "0.1.0"
authors = ["Remi Bernotavicius <remi@kunugiken.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matches = "*"
rand = "*"
serde = { version = "*", features = ['derive'] }
serde_json = "*"
log = "*"
crossbeam-utils = "*"
